<resources>
    <string name="app_name">NewsHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_more_news_headlines">Load More News Headlines.</string>
    <string name="no_internet_connection">No Internet Available try again!!! and Refresh the Page.</string>
    <string name="ok">OK</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us</string>
    <string name="report_us">Report Bug</string>
    <string name="mail_us">Suggestions</string>
    <string name="follow_us_on">Follow Us On</string>
    <string name="createdBy">Created by <b>Ankur Kushwaha</b></string>
</resources>